--- a/data/local_spark_server.ipynb
+++ b/data/local_spark_server.ipynb
@@ -332,7 +332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SQL Query 1"
+    "### SQL Query 1: Query Name"
    ]
   },
   {
@@ -348,7 +348,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SQL Query 2"
+    "### SQL Query 2: Query Name"
    ]
   },
   {
@@ -364,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SQL Query 3"
+    "### SQL Query 3: Query Name"
    ]
   },
   {
