--- a/data/local_spark_server.ipynb
+++ b/data/local_spark_server.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, BooleanType, FloatType\n",
+    "\n",
+    "# Define the schema for your CSV data\n",
+    "schemaSpotifyGenre = StructType([\n",
+    "    StructField(\"id\", IntegerType(),True),\n",
+    "    StructField(\"track_id\", StringType(), True),\n",
+    "    StructField(\"artists\", StringType(), True),\n",
+    "    StructField(\"track_name\", StringType(), True),\n",
+    "    StructField(\"album_name\", StringType(), True),\n",
+    "    StructField(\"popularity\", IntegerType(), True),\n",
+    "    StructField(\"duration_ms\", IntegerType(), True),\n",
+    "    StructField(\"explicit\", BooleanType(), True),\n",
+    "    StructField(\"danceability\", FloatType(), True),\n",
+    "    StructField(\"energy\", FloatType(), True),\n",
+    "    StructField(\"key\", IntegerType(), True),\n",
+    "    StructField(\"loudness\", FloatType(), True),\n",
+    "    StructField(\"mode\", IntegerType(), True),\n",
+    "    StructField(\"speechiness\", FloatType(), True),\n",
+    "    StructField(\"acousticness\", FloatType(), True),\n",
+    "    StructField(\"instrumentalness\", FloatType(), True),\n",
+    "    StructField(\"liveness\", FloatType(), True),\n",
+    "    StructField(\"valence\", FloatType(), True),\n",
+    "    StructField(\"tempo\", FloatType(), True),\n",
+    "    StructField(\"time_signature\", IntegerType(), True),\n",
+    "    StructField(\"track_genre\", StringType(), True)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parse the Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -84,96 +125,9 @@
     }
    ],
    "source": [
-    "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, BooleanType, FloatType\n",
-    "\n",
-    "# Define the schema for your CSV data\n",
-    "schemaSpotifyGenre = StructType([\n",
-    "    StructField(\"id\", IntegerType(), True),\n",
-    "    StructField(\"track_id\", StringType(), True),\n",
-    "    StructField(\"artists\", StringType(), True),\n",
-    "    StructField(\"track_name\", StringType(), True),\n",
-    "    StructField(\"album_name\", StringType(), True),\n",
-    "    StructField(\"popularity\", IntegerType(), True),\n",
-    "    StructField(\"duration_ms\", IntegerType(), True),\n",
-    "    StructField(\"explicit\", BooleanType(), True),\n",
-    "    StructField(\"danceability\", FloatType(), True),\n",
-    "    StructField(\"energy\", FloatType(), True),\n",
-    "    StructField(\"key\", IntegerType(), True),\n",
-    "    StructField(\"loudness\", FloatType(), True),\n",
-    "    StructField(\"mode\", IntegerType(), True),\n",
-    "    StructField(\"speechiness\", FloatType(), True),\n",
-    "    StructField(\"acousticness\", FloatType(), True),\n",
-    "    StructField(\"instrumentalness\", FloatType(), True),\n",
-    "    StructField(\"liveness\", FloatType(), True),\n",
-    "    StructField(\"valence\", FloatType(), True),\n",
-    "    StructField(\"tempo\", FloatType(), True),\n",
-    "    StructField(\"time_signature\", IntegerType(), True),\n",
-    "    StructField(\"track_genre\", StringType(), True)\n",
-    "])\n",
-    "\n",
-    "# Display the schema\n",
-    "df.printSchema()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Parse the Dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+--------------------+--------------------+--------------------+--------------------+----------+-----------+--------+------------+------+---+--------+----+-----------+------------+----------------+--------+-------+-------+--------------+-----------+\n",
-      "| id|            track_id|             artists|          track_name|          album_name|popularity|duration_ms|explicit|danceability|energy|key|loudness|mode|speechiness|acousticness|instrumentalness|liveness|valence|  tempo|time_signature|track_genre|\n",
-      "+---+--------------------+--------------------+--------------------+--------------------+----------+-----------+--------+------------+------+---+--------+----+-----------+------------+----------------+--------+-------+-------+--------------+-----------+\n",
-      "|  0|5SuOikwiRyPMVoIQD...|         Gen Hoshino|              Comedy|              Comedy|        73|     230666|   false|       0.676| 0.461|  1|  -6.746|   0|      0.143|      0.0322|         1.01E-6|   0.358|  0.715| 87.917|             4|   acoustic|\n",
-      "|  1|4qPNDBW1i3p13qLCt...|        Ben Woodward|    Ghost (Acoustic)|    Ghost - Acoustic|        55|     149610|   false|        0.42| 0.166|  1| -17.235|   1|     0.0763|       0.924|         5.56E-6|   0.101|  0.267| 77.489|             4|   acoustic|\n",
-      "|  2|1iJBSr7s7jYXzM8EG...|Ingrid Michaelson...|      To Begin Again|      To Begin Again|        57|     210826|   false|       0.438| 0.359|  0|  -9.734|   1|     0.0557|        0.21|             0.0|   0.117|   0.12| 76.332|             4|   acoustic|\n",
-      "|  3|6lfxq3CG4xtTiEg7o...|        Kina Grannis|Crazy Rich Asians...|Can't Help Fallin...|        71|     201933|   false|       0.266|0.0596|  0| -18.515|   1|     0.0363|       0.905|         7.07E-5|   0.132|  0.143| 181.74|             3|   acoustic|\n",
-      "|  4|5vjLSffimiIP26QG5...|    Chord Overstreet|             Hold On|             Hold On|        82|     198853|   false|       0.618| 0.443|  2|  -9.681|   1|     0.0526|       0.469|             0.0|  0.0829|  0.167|119.949|             4|   acoustic|\n",
-      "|  5|01MVOl9KtVTNfFiBU...|        Tyrone Wells|Days I Will Remember|Days I Will Remember|        58|     214240|   false|       0.688| 0.481|  6|  -8.807|   1|      0.105|       0.289|             0.0|   0.189|  0.666| 98.017|             4|   acoustic|\n",
-      "|  6|6Vc5wAMmXdKIAM7WU...|A Great Big World...|Is There Anybody ...|       Say Something|        74|     229400|   false|       0.407| 0.147|  2|  -8.822|   1|     0.0355|       0.857|         2.89E-6|  0.0913| 0.0765|141.284|             3|   acoustic|\n",
-      "|  7|1EzrEOXmMH3G43AXT...|          Jason Mraz|We Sing. We Dance...|           I'm Yours|        80|     242946|   false|       0.703| 0.444| 11|  -9.331|   1|     0.0417|       0.559|             0.0|  0.0973|  0.712| 150.96|             4|   acoustic|\n",
-      "|  8|0IktbUcnAGrvD03AW...|Jason Mraz;Colbie...|We Sing. We Dance...|               Lucky|        74|     189613|   false|       0.625| 0.414|  0|    -8.7|   1|     0.0369|       0.294|             0.0|   0.151|  0.669|130.088|             4|   acoustic|\n",
-      "|  9|7k9GuJYLp2AzqokyE...|      Ross Copperman|              Hunger|              Hunger|        56|     205594|   false|       0.442| 0.632|  1|   -6.77|   1|     0.0295|       0.426|         0.00419|  0.0735|  0.196| 78.899|             4|   acoustic|\n",
-      "| 10|4mzP5mHkRvGxdhdGd...|        Zack Tabudlo|             Episode|Give Me Your Forever|        74|     244800|   false|       0.627| 0.363|  8|  -8.127|   1|     0.0291|       0.279|             0.0|  0.0928|  0.301| 99.905|             4|   acoustic|\n",
-      "| 11|5ivF4eQBqJiVL5IAE...|          Jason Mraz|Love Is a Four Le...|     I Won't Give Up|        69|     240165|   false|       0.483| 0.303|  4| -10.058|   1|     0.0429|       0.694|             0.0|   0.115|  0.139|133.406|             3|   acoustic|\n",
-      "| 12|4ptDJbJl35d7gQfeN...|            Dan Berk|                Solo|                Solo|        52|     198712|   false|       0.489| 0.314|  7|  -9.245|   0|     0.0331|       0.749|             0.0|   0.113|  0.607|124.234|             4|   acoustic|\n",
-      "| 13|0X9MxHR1rTkEHDjp9...|       Anna Hamilton|            Bad Liar|            Bad Liar|        62|     248448|   false|       0.691| 0.234|  3|  -6.441|   1|     0.0285|       0.777|             0.0|    0.12|  0.209| 87.103|             4|   acoustic|\n",
-      "| 14|4LbWtBkN82ZRhz9jq...|Chord Overstreet;...|     Hold On (Remix)|     Hold On - Remix|        56|     188133|   false|       0.755|  0.78|  2|  -6.084|   1|     0.0327|       0.124|         2.83E-5|   0.121|  0.387|120.004|             4|   acoustic|\n",
-      "| 15|1KHdq8NK9QxnGjdXb...|         Landon Pigg|   The Boy Who Never|Falling in Love a...|        58|     244986|   false|       0.489| 0.561|  4|  -7.933|   1|     0.0274|         0.2|         4.56E-5|   0.179|  0.238| 83.457|             3|   acoustic|\n",
-      "| 16|6xKeQgzfjixSUld14...|Andrew Foy;Renee Foy|ily (i love you b...|ily (i love you b...|        56|     129750|   false|       0.706| 0.112|  2| -18.098|   1|     0.0391|       0.827|         4.03E-6|   0.125|  0.414|110.154|             4|   acoustic|\n",
-      "| 17|4Yo0igmcoNyat1sec...|Andrew Foy;Renee Foy|         At My Worst|         At My Worst|        54|     169728|   false|       0.795|0.0841| 10|  -18.09|   0|     0.0461|       0.742|         1.17E-5|  0.0853|  0.609| 91.803|             4|   acoustic|\n",
-      "| 18|2qLMf6TuEC3ruGJg4...|Jason Mraz;Colbie...|We Sing. We Dance...|               Lucky|        68|     189613|   false|       0.625| 0.414|  0|    -8.7|   1|     0.0369|       0.294|             0.0|   0.151|  0.669|130.088|             4|   acoustic|\n",
-      "| 19|6CgNoAbFJ4Q4Id4Ej...|Boyce Avenue;Bea ...|Cover Sessions, V...|          Photograph|        67|     260186|   false|       0.717|  0.32|  3|  -8.393|   1|     0.0283|        0.83|             0.0|   0.107|  0.322|107.946|             4|   acoustic|\n",
-      "+---+--------------------+--------------------+--------------------+--------------------+----------+-----------+--------+------------+------+---+--------+----+-----------+------------+----------------+--------+-------+-------+--------------+-----------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "23/12/15 12:03:26 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: Unnamed: 0, track_id, artists, album_name, track_name, popularity, duration_ms, explicit, danceability, energy, key, loudness, mode, speechiness, acousticness, instrumentalness, liveness, valence, tempo, time_signature, track_genre\n",
-      " Schema: id, track_id, artists, track_name, album_name, popularity, duration_ms, explicit, danceability, energy, key, loudness, mode, speechiness, acousticness, instrumentalness, liveness, valence, tempo, time_signature, track_genre\n",
-      "Expected: id but found: Unnamed: 0\n",
-      "CSV file: file:///Users/casarf/Documents/USI/Master/semester1/DataDesign/assignment3/spark_sus/data/spotify_tracks_genre.csv\n"
-     ]
-    }
-   ],
-   "source": [
     "df = spark.read.csv('./data/spotify_tracks_genre.csv', header=True, schema=schemaSpotifyGenre)\n",
-    "df.show()  # To display the first few rows of the dataframe"
+    "df.printSchema()\n",
+    "# df.show()  # To display the first few rows of the dataframe"
    ]
   },
   {
