--- a/data/local_spark_server.ipynb
+++ b/data/local_spark_server.ipynb
@@ -14,12 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.functions import col, min, max, avg, count"
+    "from pyspark.sql.functions import col, min, max, avg, count\n",
+    "from pyspark.sql import SparkSession"
    ]
   },
   {
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,41 +94,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "root\n",
-      " |-- id: integer (nullable = true)\n",
-      " |-- track_id: string (nullable = true)\n",
-      " |-- artists: string (nullable = true)\n",
-      " |-- track_name: string (nullable = true)\n",
-      " |-- album_name: string (nullable = true)\n",
-      " |-- popularity: integer (nullable = true)\n",
-      " |-- duration_ms: integer (nullable = true)\n",
-      " |-- explicit: boolean (nullable = true)\n",
-      " |-- danceability: float (nullable = true)\n",
-      " |-- energy: float (nullable = true)\n",
-      " |-- key: integer (nullable = true)\n",
-      " |-- loudness: float (nullable = true)\n",
-      " |-- mode: integer (nullable = true)\n",
-      " |-- speechiness: float (nullable = true)\n",
-      " |-- acousticness: float (nullable = true)\n",
-      " |-- instrumentalness: float (nullable = true)\n",
-      " |-- liveness: float (nullable = true)\n",
-      " |-- valence: float (nullable = true)\n",
-      " |-- tempo: float (nullable = true)\n",
-      " |-- time_signature: integer (nullable = true)\n",
-      " |-- track_genre: string (nullable = true)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = spark.read.csv('./data/spotify_tracks_genre.csv', header=True, schema=schemaSpotifyGenre)\n",
+    "df = spark.read.csv('../data/spotify_tracks_genre.csv', header=True, schema=schemaSpotifyGenre)\n",
     "df.printSchema()\n",
     "# df.show()  # To display the first few rows of the dataframe"
    ]
@@ -141,27 +112,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----------------+----------------+----------------+\n",
-      "|avg_danceability|min_danceability|max_danceability|\n",
-      "+----------------+----------------+----------------+\n",
-      "|            NULL|            NULL|            NULL|\n",
-      "+----------------+----------------+----------------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Filter for 'Jason Mraz' in the artist column and 'acoustic' in the genre column\n",
+    "# Filter for 'Bad Bunny' in the artist column and 'acoustic' in the genre column\n",
     "filtered_df = df.filter(\n",
-    "    (col(\"artists\").like(\"Bad Bunny\")) & \n",
-    "    (col(\"track_genre\") == \"acoustic\")\n",
+    "    col(\"artists\").like(\"Bad Bunny\")\n",
     ")\n",
     "\n",
     "# Select the 'danceability' column and calculate the average, minimum, and maximum\n",
@@ -172,10 +129,7 @@
     ")\n",
     "\n",
     "# Show the results\n",
-    "aggregated_df.show()\n",
-    "\n",
-    "# Stop the SparkSession\n",
-    "spark.stop()"
+    "aggregated_df.show()"
    ]
   },
   {
@@ -189,42 +143,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+--------------+\n",
-      "|             artists|explicit_count|\n",
-      "+--------------------+--------------+\n",
-      "|         Jack Harlow|            71|\n",
-      "|    Jhayco;Bad Bunny|            64|\n",
-      "|      Marilyn Manson|            61|\n",
-      "|        XXXTENTACION|            59|\n",
-      "|Daddy Yankee;Bad ...|            58|\n",
-      "|         Vybz Kartel|            54|\n",
-      "|             Asspera|            51|\n",
-      "|              Jhayco|            46|\n",
-      "|     Alejo;Feid;ROBI|            44|\n",
-      "|                Feid|            43|\n",
-      "|                 Jax|            38|\n",
-      "|Five Finger Death...|            37|\n",
-      "|Bring Me The Horizon|            36|\n",
-      "|Chris Jedi;Anuel ...|            33|\n",
-      "|             KAROL G|            33|\n",
-      "|             Pantera|            32|\n",
-      "|           blink-182|            32|\n",
-      "|         Chronic Law|            31|\n",
-      "|          Burgerkill|            29|\n",
-      "|    Kathleen Madigan|            29|\n",
-      "+--------------------+--------------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "result = (\n",
     "    df.filter(col('explicit') == True)  # Filter for explicit songs\n",
@@ -249,7 +170,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Put query here LOLLO"
+    "# Filter the DataFrame for tracks longer than 240000 milliseconds and with loudness less than -10.0 dB\n",
+    "filtered_df = df.filter((col(\"duration_ms\") > 240000) & (col(\"loudness\") < -10.0))\n",
+    "\n",
+    "# Select the desired columns\n",
+    "selected_df = filtered_df.select('track_id', 'track_name', 'duration_ms', 'loudness')\n",
+    "\n",
+    "# Show the results\n",
+    "selected_df.show()"
    ]
   },
   {
@@ -264,53 +192,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------------------+------------+\n",
-      "|track_name                      |danceability|\n",
-      "+--------------------------------+------------+\n",
-      "|Mentally Free                   |0.975       |\n",
-      "|Afrowave 2                      |0.966       |\n",
-      "|Queda poco para la PAES         |0.965       |\n",
-      "|King of Parole                  |0.961       |\n",
-      "|Loaded                          |0.961       |\n",
-      "|Money Dance                     |0.958       |\n",
-      "|The Trinity                     |0.951       |\n",
-      "|The Trinity                     |0.951       |\n",
-      "|Temperature                     |0.951       |\n",
-      "|The Trinity                     |0.95        |\n",
-      "|No Reservations                 |0.948       |\n",
-      "|Bunx Up (feat. Marcy Chin)      |0.947       |\n",
-      "|Bunx Up [The Official Street LP]|0.944       |\n",
-      "|Banga                           |0.943       |\n",
-      "|Find It                         |0.94        |\n",
-      "|Play Tune (So so So)            |0.935       |\n",
-      "|Pa' mayores de edad             |0.931       |\n",
-      "|Retro 13 (Special Dj Greg C)    |0.931       |\n",
-      "|Yahoo Boyz                      |0.931       |\n",
-      "|Fatty Boom Boom (Boom It!)      |0.928       |\n",
-      "+--------------------------------+------------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "23/12/15 16:14:10 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: album_name, explicit, danceability, track_genre\n",
-      " Schema: track_name, explicit, danceability, track_genre\n",
-      "Expected: track_name but found: album_name\n",
-      "CSV file: file:///Users/casarf/Documents/USI/Master/semester1/DataDesign/assignment3/spark_sus/data/spotify_tracks_genre.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "genre = 'dance'  # Replace 'dance' with your desired genre\n",
     "\n",
@@ -340,7 +224,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Put query here LOLLO"
+    "# Filter the DataFrame for tracks with popularity less than 40 and valence greater than 0.7\n",
+    "filtered_df = df.filter((col(\"popularity\") < 40) & (col(\"popularity\") > 10) & (col(\"valence\") > 0.7))\n",
+    "\n",
+    "# Select the desired columns\n",
+    "selected_df = filtered_df.select('track_name', 'artists', 'popularity', 'valence')\n",
+    "\n",
+    "# Show the results\n",
+    "selected_df.show()"
    ]
   },
   {
@@ -362,40 +253,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "23/12/15 16:14:13 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: track_name, duration_ms\n",
-      " Schema: album_name, duration_ms\n",
-      "Expected: album_name but found: track_name\n",
-      "CSV file: file:///Users/casarf/Documents/USI/Master/semester1/DataDesign/assignment3/spark_sus/data/spotify_tracks_genre.csv\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----------------------+--------------+\n",
-      "|album_name            |total_duration|\n",
-      "+----------------------+--------------+\n",
-      "|Run Rudolph Run       |24605335      |\n",
-      "|Christmas Time        |16785840      |\n",
-      "|Halloween             |16031062      |\n",
-      "|RUMBATÓN              |14926080      |\n",
-      "|CÓMO SE SIENTE - Remix|14561280      |\n",
-      "+----------------------+--------------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from pyspark.sql import SparkSession\n",
-    "\n",
     "# Register the DataFrame as a temporary SQL table\n",
     "df.createOrReplaceTempView(\"spotify_genre_table\")\n",
     "\n",
@@ -427,7 +288,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Put query here LOLLO"
+    "# Register the DataFrame as a temporary table\n",
+    "df.createOrReplaceTempView(\"tracks\")\n",
+    "\n",
+    "sql_query = \"\"\"\n",
+    "    SELECT track_id, track_name, instrumentalness, speechiness\n",
+    "    FROM tracks\n",
+    "    WHERE instrumentalness > 0.5 AND speechiness < 0.3\n",
+    "\"\"\"\n",
+    "\n",
+    "# Execute the SQL query\n",
+    "result = spark.sql(sql_query)\n",
+    "\n",
+    "result.show()"
    ]
   },
   {
@@ -443,26 +316,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----------+------------------+\n",
-      "|track_genre|avg_popularity    |\n",
-      "+-----------+------------------+\n",
-      "|pop-film   |59.287575150300604|\n",
-      "|k-pop      |56.896            |\n",
-      "|chill      |53.651            |\n",
-      "|sad        |52.379            |\n",
-      "|grunge     |49.594            |\n",
-      "+-----------+------------------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Put query here FRUAH\n",
     "df.createOrReplaceTempView(\"spotify_genre_table\")\n",
@@ -478,7 +334,7 @@
     "# Execute the SQL query\n",
     "result = spark.sql(sql_query)\n",
     "\n",
-    "result.show(truncate=False)\n"
+    "result.show(truncate=False)"
    ]
   }
  ],
@@ -498,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
