--- a/data/local_spark_server.ipynb
+++ b/data/local_spark_server.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,8 +64,8 @@
     "    StructField(\"id\", IntegerType(),True),\n",
     "    StructField(\"track_id\", StringType(), True),\n",
     "    StructField(\"artists\", StringType(), True),\n",
-    "    StructField(\"track_name\", StringType(), True),\n",
     "    StructField(\"album_name\", StringType(), True),\n",
+    "    StructField(\"track_name\", StringType(), True),\n",
     "    StructField(\"popularity\", IntegerType(), True),\n",
     "    StructField(\"duration_ms\", IntegerType(), True),\n",
     "    StructField(\"explicit\", BooleanType(), True),\n",
@@ -161,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Python Query 3: Query Name"
+    "### Python Query 3: Long and Soft Tracks"
    ]
   },
   {
@@ -174,7 +174,7 @@
     "filtered_df = df.filter((col(\"duration_ms\") > 240000) & (col(\"loudness\") < -10.0))\n",
     "\n",
     "# Select the desired columns\n",
-    "selected_df = filtered_df.select('track_id', 'track_name', 'duration_ms', 'loudness')\n",
+    "selected_df = filtered_df.select('track_id', 'artists', 'track_name', 'duration_ms', 'loudness')\n",
     "\n",
     "# Show the results\n",
     "selected_df.show()"
@@ -215,7 +215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Python Query 5: Query Name"
+    "### Python Query 5: Understated Upbeat Tracks"
    ]
   },
   {
@@ -279,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SQL Query 2: Query Name"
+    "### SQL Query 2: Highly Instrumental Tracks"
    ]
   },
   {
