Add comments in the notebook to new queries

--- a/data/local_spark_server.ipynb
+++ b/data/local_spark_server.ipynb
@@ -111,6 +111,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analyzing Bad Bunny's tracks for danceability metrics, including average, minimum, and maximum values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -165,6 +172,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Identifies tracks exceeding four minutes in duration and having a loudness level below -10 dB for detailed analysis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -216,6 +230,13 @@
    "metadata": {},
    "source": [
     "### Python Query 5: Understated Upbeat Tracks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Filters for moderately popular yet upbeat tracks, based on specific popularity and high valence criteria."
    ]
   },
   {
@@ -280,6 +301,13 @@
    "metadata": {},
    "source": [
     "### SQL Query 2: Highly Instrumental Tracks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Selects tracks with high instrumental content and low vocal presence, focusing on instrumentalness and speechiness values."
    ]
   },
   {
